--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <div id="calculator">
             <div id="display">
                 <div id="display-previous">ans</div>
-                <div id="display-current">()</div>
+                <div id="display-expression"></div>
+                <div id="display-answer"> ()</div>
             </div>
             <div id="buttons">
                 <div id="number-buttons">
@@ -22,7 +23,7 @@
                         <button data-type="input" data-value="2">2</button>
                         <button data-type="input" data-value="3">3</button>
                         <button data-type="input" data-value="÷">÷</button>
-                        <button data-type="" data-value=""></button>
+                        <button data-type="input" data-value="(">(</button>
                     </div>
                     <div class="button-row">
                         <button data-type="" data-value=""></button>
@@ -30,23 +31,23 @@
                         <button data-type="input" data-value="5">5</button>
                         <button data-type="input" data-value="6">6</button>
                         <button data-type="input" data-value="×">×</button>
-                        <button data-type="" data-value=""></button>
+                        <button data-type="input" data-value=")">)</button>
                     </div>
                     <div class="button-row">
-                        <button data-type="input" data-value="root">sqr</button>
+                        <button data-type="input" data-value="√(">√</button>
                         <button data-type="input" data-value="7">7</button>
                         <button data-type="input" data-value="8">8</button>
                         <button data-type="input" data-value="9">9</button>
                         <button data-type="input" data-value="-">-</button>
-                        <button data-type="" data-value=""></button>
+                        <button data-type="del">DEL</button>
                     </div>
                     <div class="button-row">
-                        <button data-type="input" data-value="power">pwr</button>
+                        <button data-type="input" data-value="**(">xʸ</button>
                         <button data-type="input" data-value="0">0</button>
                         <button data-type="input" data-value=".">.</button>
                         <button data-type="eval">=</button>
                         <button data-type="input" data-value="+">+</button>
-                        <button data-type="clear">AC</button>
+                        <button data-type="clear">CLR</button>
                     </div>
                 </div>
             </div>
