disabling sqrt and x**y buttons, not working yet

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div id="buttons">
                 <div id="number-buttons">
                     <div class="button-row">
-                        <button data-type="" data-value=""></button>
+                        <button data-type="notImplemented" data-value=""></button>
                         <button data-type="input" data-value="1">1</button>
                         <button data-type="input" data-value="2">2</button>
                         <button data-type="input" data-value="3">3</button>
@@ -26,7 +26,7 @@
                         <button data-type="input" data-value="(">(</button>
                     </div>
                     <div class="button-row">
-                        <button data-type="" data-value=""></button>
+                        <button data-type="notImplemented" data-value=""></button>
                         <button data-type="input" data-value="4">4</button>
                         <button data-type="input" data-value="5">5</button>
                         <button data-type="input" data-value="6">6</button>
@@ -34,7 +34,7 @@
                         <button data-type="input" data-value=")">)</button>
                     </div>
                     <div class="button-row">
-                        <button data-type="input" data-value="√(">√</button>
+                        <button data-type="notImplemented" data-value="√(">√</button>
                         <button data-type="input" data-value="7">7</button>
                         <button data-type="input" data-value="8">8</button>
                         <button data-type="input" data-value="9">9</button>
@@ -42,7 +42,7 @@
                         <button data-type="del">DEL</button>
                     </div>
                     <div class="button-row">
-                        <button data-type="input" data-value="**(">xʸ</button>
+                        <button data-type="notImplemented" data-value="**(">xʸ</button>
                         <button data-type="input" data-value="0">0</button>
                         <button data-type="input" data-value=".">.</button>
                         <button data-type="eval">=</button>
@@ -51,6 +51,9 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div id="footer">
+            The buttons in the most left column are not implemented yet.
         </div>
     </body>
 </html>
